[package]
name = "chinese_color_picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.0"
glib = "0.14.0"
serde_json = "1.0.72"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]